# gravity_comp_joint_traj_controller

./: CMakeLists.txt  LICENSE  README.md  controller_plugins.xml  env.sh  package.xml  setup_local_coc_nvim.sh
config/: ee_added_mass.xacro  gen3_robotiq_corrected_endweight.xacro  kinova_gen3_controllers.yaml
include/: gravity_comp_hardware_interface_adapter.h
launch/: default.launch  spawn_kortex_robot.launch  test.launch  test_gazebo.launch
msg/: GravityAdjustedEfforts.msg
src/: gravity_comp_joint_trajectory_controller.cpp  test_include_joint_trajectory_controller.cpp
